Added UCI Heart Dataset.

--- a/notebooks/classification_karlidean.ipynb
+++ b/notebooks/classification_karlidean.ipynb
@@ -2,25 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e8ee0827",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing Packages from the Python Library\n",
+    "import pandas as pd\n",
+    "import pathlib\n",
+    "from pathlib import Path\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from dataclasses import dataclass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e3558499",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving to: C:\\Repos\\ml-classification-karlidean\\data\\raw\n",
-      "Saved: C:\\Repos\\ml-classification-karlidean\\data\\raw\\heart_disease.csv\n"
+      "DATA CAPTURE PROCESS STATUS: INITIALIZATION: SAVING DATA TO: C:\\Repos\\ml-classification-karlidean\\data\\raw\n",
+      "DATA CAPTURE PROCESS STATUS: COMPLETE: SAVED DATA TO: C:\\Repos\\ml-classification-karlidean\\data\\raw\\heart_disease.csv\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import pathlib\n",
-    "from pathlib import Path\n",
-    "\n",
-    "\n",
     "from ucimlrepo import fetch_ucirepo\n",
     "\n",
     "# Assume notebook lives in repo_root/notebooks/\n",
@@ -28,7 +41,7 @@
     "raw_data_dir = repo_root / \"data\" / \"raw\"\n",
     "raw_data_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "print(\"Saving to:\", raw_data_dir)\n",
+    "print(\"DATA CAPTURE PROCESS STATUS: INITIALIZATION: SAVING DATA TO:\", raw_data_dir)\n",
     "\n",
     "# Fetch dataset\n",
     "heart_disease = fetch_ucirepo(id=45)\n",
@@ -41,7 +54,7 @@
     "# Save to the correct folder (regardless of where your notebook lives)\n",
     "df.to_csv(raw_data_dir / \"heart_disease.csv\", index=False)\n",
     "\n",
-    "print(\"Saved:\", raw_data_dir / \"heart_disease.csv\")"
+    "print(\"DATA CAPTURE PROCESS STATUS: COMPLETE: SAVED DATA TO:\", raw_data_dir / \"heart_disease.csv\")"
    ]
   }
  ],
