--- a/notebooks/classification_karlidean.ipynb
+++ b/notebooks/classification_karlidean.ipynb
@@ -1,6 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "190b8561",
+   "metadata": {},
+   "source": [
+    "# Predicting Heart Disease in Patients\n",
+    "-- Applied Machine Learning Midterm Fall 2025 --"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33d67d77",
+   "metadata": {},
+   "source": [
+    "**Name:** Karli Dean\\\n",
+    "**Date:** November 11, 2025"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf35d79d",
+   "metadata": {},
+   "source": [
+    "**Purpose:** Heart conditions and diseases run rampant throughout the United States. So, much that 1 in 3 deaths in the United States are related to a heart condition, making it the leading cause of death in most racial and ethnic groups, according to the [CDC](https://www.cdc.gov/heart-disease/data-research/facts-stats/index.html). Heart disease is something near and dear to my own heart (no pun intended) as it is something I am at risk of genealogically. My grandfather was many a victim to heart attacks, and I have other family members who suffer from diabetes, which can affect the heart due to misregulation of sugar in the blood. This classification analysis will make for a way to understand if someone is at risk for this kind of health concern."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "684d3df5",
+   "metadata": {},
+   "source": [
+    "## Section 1 - Imports"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "488ec3bf",
+   "metadata": {},
+   "source": [
+    "### Section 1.1  - Standard Python Library Imports\n",
+    "These are all of the packages and imported tools I've used in this analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "e8ee0827",
@@ -16,6 +59,16 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from dataclasses import dataclass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ab95aca",
+   "metadata": {},
+   "source": [
+    "### Section 1.2 - Importing and Inspecting the Data Set\n",
+    "#### Section 1.2.1 - Importing the Data from the Internet\n",
+    "This is the heart disease data set from the [UC - Irvine Machine Learning Repository](https://archive.ics.uci.edu/dataset/45/heart+disease). A detailed description of all of our features can be found in the [README.md]()."
    ]
   },
   {
@@ -55,6 +108,34 @@
     "df.to_csv(raw_data_dir / \"heart_disease.csv\", index=False)\n",
     "\n",
     "print(\"DATA CAPTURE PROCESS STATUS: COMPLETE: SAVED DATA TO:\", raw_data_dir / \"heart_disease.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b722f6f1",
+   "metadata": {},
+   "source": [
+    "#### Section 1.2.2 - Inspecting the Data Set with the `.head()` Function\n",
+    "Now that our data is loaded into our raw data folder, we can inspect it to see what it looks like and what kinds of features there are. Let's use the `.head()` function to look at those first 10 rows of our DataFrame (labeled df)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce2c4c39",
+   "metadata": {},
+   "source": [
+    "#### Section 1.2.3 - Inspecting the data with the `.isnull()` Function\n",
+    "Cool! We can now see the DataFrame! Now, we're going to use the `.isnull()` function to see how many missing values there are. What makes this function really cool is that this function will tell us what feature houses the null records."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddefd886",
+   "metadata": {},
+   "source": [
+    "### Reflection 1 - \n",
+    "1. What do you notice about the dataset?\n",
+    "2. Are there any data issues?"
    ]
   }
  ],
