Outlined Section 2 items.

--- a/notebooks/classification_karlidean.ipynb
+++ b/notebooks/classification_karlidean.ipynb
@@ -133,9 +133,91 @@
    "id": "ddefd886",
    "metadata": {},
    "source": [
-    "### Reflection 1 - \n",
+    "## Reflection 1 - \n",
     "1. What do you notice about the dataset?\n",
     "2. Are there any data issues?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7d759a4",
+   "metadata": {},
+   "source": [
+    "## Section 2 - Data Exploration and Preparation\n",
+    "In this section, we will be looking at models to see if there are any trends between features and handling our missing values in the set. This preparation makes our data easier to work with, so we call it feature engineering!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "285ccb97",
+   "metadata": {},
+   "source": [
+    "### Section 2.1 - Explore Data Patterns and Distributions\n",
+    "This part of data exploration is very fun because we get to look at pretty pictures and tell people what they mean. We're going to create histograms and boxplots to understand the distribution of our data. We will not be examining the binary features with this, as we will not be able to see much difference. We can use count plots for those features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "13b29e28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histograms, Boxplots, Countplots (I like boxplots!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1694df8",
+   "metadata": {},
+   "source": [
+    "### Section 2.2 - Handling Missing Values and Cleaning Data\n",
+    "This section is more on feature engineering, which will make our data easier to understand as we plot items and try to analyze. We will be filling in any numerical (non-binary keys) with a median value, and binary keys with the most-occurring result in the feature. I understand this can cause noise in the graph, however, it is a way to clean the data that can introduce the \"one-in-a-million\" record who has everything that should point to heart disease, but the patient is clean."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d8f1673a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Impute or Drop Missing Values\n",
+    "# Remove or Transform Outliers\n",
+    "# Categorical to Numerical Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76bfe8c8",
+   "metadata": {},
+   "source": [
+    "### Section 2.3 - Feature Selection and Engineering\n",
+    "Covering the bulk of feature engineering, we should have now realized what features we want to measure to predict our target feature (Heart Disease, with or without?). Now, we will make our features easier to comprehend and create new features where applicable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3eca4d8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do you need to create new features?\n",
+    "# Do you need to combine existing features?\n",
+    "# Do you need to normalize the data?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7419f01a",
+   "metadata": {},
+   "source": [
+    "## Reflection 2 - \n",
+    "1. What patterns or anomalies do you see?\n",
+    "2. Do any features stand out?\n",
+    "3. What preprocessing steps were necessary to clean and improve the data?\n",
+    "4. Did you create or modify any features to improve performance?"
    ]
   }
  ],
