Completed Story Outline.

--- a/notebooks/classification_karlidean.ipynb
+++ b/notebooks/classification_karlidean.ipynb
@@ -219,6 +219,195 @@
     "3. What preprocessing steps were necessary to clean and improve the data?\n",
     "4. Did you create or modify any features to improve performance?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8df5b9f1",
+   "metadata": {},
+   "source": [
+    "## Section 3 - Feature Selection and Justification\n",
+    "This section allows us to put our data against itself and explain why it's the most important to predict this target."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28bb6580",
+   "metadata": {},
+   "source": [
+    "### Section 3.1 - Choose Features and Target"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3729ef6b",
+   "metadata": {},
+   "source": [
+    "#### Section 3.1.1 - Predicting Features\n",
+    "These are what will be predicting our target. Justify."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ca310f9",
+   "metadata": {},
+   "source": [
+    "#### Section 3.1.2 - Target Variable\n",
+    "This is what we will be predicting. Justify."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf1802a8",
+   "metadata": {},
+   "source": [
+    "### Section 3.2 - Define X and y\n",
+    "This allows us to mathematically solidify our choices of targets and predictors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "905cf07c",
+   "metadata": {},
+   "source": [
+    "## Reflection 3 - \n",
+    "1. Why did you choose these features?\n",
+    "2. How might they affect predictions or accuracy?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee73d26b",
+   "metadata": {},
+   "source": [
+    "## Section 4 - Training a Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8957e86",
+   "metadata": {},
+   "source": [
+    "### Section 4.1 - Splitting the Data\n",
+    "In order to create a model, we have to split our data into training and testing data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b88318b",
+   "metadata": {},
+   "source": [
+    "### Section 4.2 - Training the Data\n",
+    "With the training data, we will build the model. We will then test the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "deed09d8",
+   "metadata": {},
+   "source": [
+    "### Section 4.3 - Evaluating Model Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00aeb107",
+   "metadata": {},
+   "source": [
+    "#### Section 4.3.1 - Testing the Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0cd40d8",
+   "metadata": {},
+   "source": [
+    "#### Section 4.3.2 - Model Metrics and Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ce1004f",
+   "metadata": {},
+   "source": [
+    "## Reflection 4 - \n",
+    "1. How well did the model perform?\n",
+    "2. Are there any surprises in the results?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07ce3598",
+   "metadata": {},
+   "source": [
+    "## Section 5 - Improve the Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9bf00f3",
+   "metadata": {},
+   "source": [
+    "### Section 5.1 - Adjusting the Hyperparameters on the Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0127b095",
+   "metadata": {},
+   "source": [
+    "### Section 5.2 - Model Comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "134e6127",
+   "metadata": {},
+   "source": [
+    "## Reflection 5 - \n",
+    "1. Which model performed better?\n",
+    "2. Why might one classifier be more effective in this specific case?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d31f7b9f",
+   "metadata": {},
+   "source": [
+    "## Section 6 - Final Thoughts and Insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c386e8b3",
+   "metadata": {},
+   "source": [
+    "### Section 6.1 - Summarizing My Findings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ee45f10",
+   "metadata": {},
+   "source": [
+    "### Section 6.2 - What Challenges Were Faced?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae753a77",
+   "metadata": {},
+   "source": [
+    "### Section 6.3 - If I Had More Time, What Would I Try?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58e7007d",
+   "metadata": {},
+   "source": [
+    "## Reflection 6 -\n",
+    "1. What did you learn from this project?"
+   ]
   }
  ],
  "metadata": {
