--- a/notebooks/classification_karlidean.ipynb
+++ b/notebooks/classification_karlidean.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "e8ee0827",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "e3558499",
    "metadata": {},
    "outputs": [
@@ -120,6 +120,165 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12edb12f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>160</td>\n",
+       "      <td>286</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120</td>\n",
+       "      <td>229</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>129</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slope  \\\n",
+       "0   63    1   1       145   233    1        2      150      0      2.3      3   \n",
+       "1   67    1   4       160   286    0        2      108      1      1.5      2   \n",
+       "2   67    1   4       120   229    0        2      129      1      2.6      2   \n",
+       "3   37    1   3       130   250    0        0      187      0      3.5      3   \n",
+       "4   41    0   2       130   204    0        2      172      0      1.4      1   \n",
+       "\n",
+       "    ca  thal  num  \n",
+       "0  0.0   6.0    0  \n",
+       "1  3.0   3.0    2  \n",
+       "2  2.0   7.0    1  \n",
+       "3  0.0   3.0    0  \n",
+       "4  0.0   3.0    0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using the .head() function\n",
+    "df.head(10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ce2c4c39",
    "metadata": {},
@@ -129,13 +288,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "51757e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age         0\n",
+       "sex         0\n",
+       "cp          0\n",
+       "trestbps    0\n",
+       "chol        0\n",
+       "fbs         0\n",
+       "restecg     0\n",
+       "thalach     0\n",
+       "exang       0\n",
+       "oldpeak     0\n",
+       "slope       0\n",
+       "ca          4\n",
+       "thal        2\n",
+       "num         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using the .isnull() function\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ddefd886",
    "metadata": {},
    "source": [
     "## Reflection 1 - \n",
-    "1. What do you notice about the dataset?\n",
-    "2. Are there any data issues?"
+    "1. What do you notice about the dataset? The first thing I noticed is the data is all numerical. Being without categorical data can aid in some models, but hurt us in other models. Items like linear regressions are common with all-numerical data, but we can still run items like confusion matrices.\n",
+    "2. Are there any data issues? The data looks pretty standardized from a float view in the head, but there are some missing values in the `ca` and `thal` fields. The ca is the number of colored vessels and the thal (likely meaning thalassemia), which is an inherited blood disorder that can cause cardiac complications."
    ]
   },
   {
@@ -158,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "13b29e28",
    "metadata": {},
    "outputs": [],
@@ -177,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "d8f1673a",
    "metadata": {},
    "outputs": [],
@@ -198,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "3eca4d8d",
    "metadata": {},
    "outputs": [],
