--- a/notebooks/classification_karlidean.ipynb
+++ b/notebooks/classification_karlidean.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 100,
    "id": "e8ee0827",
    "metadata": {},
    "outputs": [],
@@ -57,8 +57,9 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from dataclasses import dataclass"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report, confusion_matrix"
    ]
   },
   {
